force-app/main/default/objects/NSSales_AllOpportunityRollups__c/NSSales_AllOpportunityRollups__c.object-meta.xml
<CustomObject>
    <description>This object will display all opportunities that are under a given account based on the hierarchy. Opportunities from all child accounts should roll up to its ultimate parent.</description>
    <label>All Opportunity Rollups</label>
    <nameField>
        <displayFormat>OR-{0000000000}</displayFormat>
        <label>Opportunity Rollup</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>All Opportunity Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>