force-app/main/default/objects/NSSales_AllOpportunityRollups__c/fields/NSSales_Account__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account for the opportunity</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>All Opportunity Rollups</relationshipLabel>
    <relationshipName>All_Opportunity_Rollups</relationshipName>
    <type>Lookup</type>
</CustomField>