force-app/main/default/objects/NSSales_AllOpportunityRollups__c/fields/NSSales_CloseDate__c.field-meta.xml
<CustomField>
    <fullName>NSSales_CloseDate__c</fullName>
    <description>Close date of the related opportunity</description>
    <formula>NSSales_Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>