force-app/main/default/objects/NSSales_AllOpportunityRollups__c/fields/NSSales_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Opportunity__c</fullName>
    <description>Opportunity Related to a particular record</description>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>All Opportunity Rollups</relationshipLabel>
    <relationshipName>All_Opportunity_Rollups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>