force-app/main/default/objects/NSSales_AllOpportunityRollups__c/fields/NSSales_OpportunityOwner__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OpportunityOwner__c</fullName>
    <description>Owner name of the related opportunity</description>
    <formula>NSSales_Opportunity__r.NSSales_Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>