force-app/main/default/objects/NSSales_AllOpportunityRollups__c/fields/NSSales_OriginatingDepartment__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OriginatingDepartment__c</fullName>
    <description>Originating Department of the related opportunity</description>
    <formula>Text(NSSales_Opportunity__r.NS_Originating_Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Originating Department</label>
    <type>Text</type>
</CustomField>