force-app/main/default/objects/NSSales_AllOpportunityRollups__c/fields/NSSales_Stage__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Stage__c</fullName>
    <description>Stage name of the related opportunity</description>
    <formula>Text(NSSales_Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>