force-app/main/default/objects/NSSales_AllOpportunityRollups__c/fields/NSSales_UltimateParentAccount__c.field-meta.xml
<CustomField>
    <fullName>NSSales_UltimateParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ultimate Parent Account of the opportunity</description>
    <label>Ultimate Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>All Opportunity Rollups (Ultimate Parent Account)</relationshipLabel>
    <relationshipName>All_Opportunity_Rollups1</relationshipName>
    <type>Lookup</type>
</CustomField>